--- a/docstrings/numerical_simulation/propagation_setup/acceleration.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/acceleration.yaml
@@ -337,7 +337,7 @@ classes:
       - name: thrustDirectionFunction_ # [cpp] # readonly
         type: std::function<Eigen::Vector3d(double)> # [cpp]
       - name: thrust_direction_function # [py] # readonly
-        type: Callable[[float], numpy.ndarray] # [py]
+        type: callable[[float], numpy.ndarray] # [py]
         description: Function of time returning the thrust direction in the inertial frame.
 
 
@@ -358,7 +358,7 @@ classes:
       - name: thrustOrientationFunction_ # [cpp] # readonly
         type: std::function<Eigen::Quaterniond(double)> # [cpp]
       - name: thrust_orientation_function # [py] # readonly
-        type: Callable[[float], numpy.ndarray] # [py]
+        type: callable[[float], numpy.ndarray] # [py]
         description: Function of time returning the rotation between the thrust direction in the body-fixed frame to the inertial frame.
 
 
@@ -384,7 +384,7 @@ classes:
       - name: costateFunction_ # [cpp] # readonly
         type: std::function<Eigen::VectorXd(double)> # [cpp]
       - name: costate_function # [py] # readonly
-        type: Callable[[float], numpy.ndarray] # [py]
+        type: callable[[float], numpy.ndarray] # [py]
         description: Function of time returning the five costates.
 
 
@@ -706,13 +706,13 @@ functions:
       - name: accelerationFunction # [cpp]
         type: std::function<Eigen::Vector3d(const double)> # [cpp]
       - name: acceleration_function # [py]
-        type: Callable[[float], list] # [py]
+        type: callable[[float], list] # [py]
         description: Custom acceleration function with time as an independent variable.
 
       - name: scalingFunction # [cpp]
         type: std::function<double(const double)>, default=nullptr # [cpp]
       - name: scaling_function # [py]
-        type: Callable[[float], float], default=None # [py]
+        type: callable[[float], float], default=None # [py]
         description: Scaling function with time as an independent variable to be multiplied by the custom acceleration function.
 
     returns:
@@ -852,7 +852,7 @@ functions:
       - name: specificImpulseFunction # [cpp]
         type: std::function<double(double)> # [cpp]
       - name: specific_impulse_function # [py]
-        type: Callable[[double], double] # [py]
+        type: callable[[double], double] # [py]
         description: Specific impulse provided as a function of time.
 
       - name: thrustFrame # [cpp]
@@ -932,13 +932,13 @@ functions:
 #      - name: thrustDirections # [cpp]
 #        type: std::vector<std::function<Eigen::Vector3d()>> # [cpp]
 #      - name: thrust_directions # [py]
-#        type: list[Callable[[], numpy.ndarray] # [py]
+#        type: list[callable[[], numpy.ndarray] # [py]
 #        description: Set of functions of time representing the thrust direction vector of each thrust source.
 #
 #      - name: thrustMagnitudes # [cpp]
 #        type: std::vector<std::function<double()> # [cpp]
 #      - name: thrust_magnitudes # [py]
-#        type: list[Callable[[], float] # [py]
+#        type: list[callable[[], float] # [py]
 #        description: Set of functions of time representing the thrust magnitude of each thrust source.
 #
 #    returns:
@@ -959,13 +959,13 @@ functions:
 #      - name: thrustDirections # [cpp]
 #        type: std::vector<std::function<Eigen::Vector3d()>> # [cpp]
 #      - name: thrust_directions # [py]
-#        type: list[Callable[[], numpy.ndarray] # [py]
+#        type: list[callable[[], numpy.ndarray] # [py]
 #        description: Set of functions of time representing the thrust direction vector of each thrust source.
 #
 #      - name: thrustMagnitudes # [cpp]
 #        type: std::vector<std::function<double()> # [cpp]
 #      - name: thrust_magnitudes # [py]
-#        type: list[Callable[[], float] # [py]
+#        type: list[callable[[], float] # [py]
 #        description: Set of functions of time representing the thrust magnitude of each thrust source.
 #
 #    returns:
@@ -986,13 +986,13 @@ functions:
 #      - name: thrustDirections # [cpp]
 #        type: std::vector<std::function<Eigen::Vector3d()>> # [cpp]
 #      - name: thrust_directions # [py]
-#        type: list[Callable[[], numpy.ndarray] # [py]
+#        type: list[callable[[], numpy.ndarray] # [py]
 #        description: Set of functions of time representing the thrust direction vector of each thrust source.
 #
 #      - name: thrustMagnitudes # [cpp]
 #        type: std::vector<std::function<double()> # [cpp]
 #      - name: thrust_magnitudes # [py]
-#        type: list[Callable[[], float] # [py]
+#        type: list[callable[[], float] # [py]
 #        description: Set of functions of time representing the thrust magnitude of each thrust source.
 #
 #    returns:
@@ -1024,7 +1024,7 @@ functions:
 #      - name: currentTime # [cpp]
 #        type: std::vector<std::function<double()> # [cpp]
 #      - name: current_time # [py]
-#        type: list[Callable[[], float] # [py]
+#        type: list[callable[[], float] # [py]
 #        description: Time at which the thrust direction and magnitude should be updated.
 #
 #
@@ -1051,7 +1051,7 @@ functions:
 #      - name: currentTime # [cpp]
 #        type: std::vector<std::function<double()> # [cpp]
 #      - name: current_time # [py]
-#        type: list[Callable[[], float] # [py]
+#        type: list[callable[[], float] # [py]
 #        description: Time to which the old time should be updated (relevant for the thrust direction and magnitude).
 
   # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -1085,7 +1085,7 @@ functions:
       - name: guidanceInputFunctions # [cpp]
         type: std::vector<std::function<double()>, default=std::vector<std::function<double()>() # [cpp]
       - name: guidance_input_functions # [py]
-        type: list[Callable[[], float], default=[] # [py]
+        type: list[callable[[], float], default=[] # [py]
         description: Set of functions to compute the thrust, each associated to a specific dependent variable.
 
 
@@ -1177,7 +1177,7 @@ functions:
       - name: thrustOrientationFunction # [cpp]
         type: std::function<Eigen::Matrix3d(double)> # [cpp]
       - name: thrust_orientation_function # [py]
-        type: Callable[[float], numpy.ndarray] # [py]
+        type: callable[[float], numpy.ndarray] # [py]
         description: Function of time returning the matrix representing the rotation between the thrust direction in the body-fixed frame to the inertial frame.
 
     returns:
@@ -1199,7 +1199,7 @@ functions:
       - name: thrustDirectionFunction # [cpp]
         type: std::function<Eigen::Vector3d(double)> # [cpp]
       - name: thrust_direction_function # [py]
-        type: Callable[[float], numpy.ndarray] # [py]
+        type: callable[[float], numpy.ndarray] # [py]
         description: Function of time returning the thrust direction in the inertial frame.
 
     returns:
@@ -1328,31 +1328,31 @@ functions:
       - name: thrustMagnitudeFunction # [cpp]
         type: std::function<double(double)> # [cpp]
       - name: thrust_magnitude_function # [py]
-        type: Callable[[float], float] # [py]
+        type: callable[[float], float] # [py]
         description: Function of time returning the value of the thrust magnitude.
 
       - name: specificImpulseFunction # [cpp]
         type: std::function<double(double)> # [cpp]
       - name: specific_impulse_function # [py]
-        type: Callable[[float], float] # [py]
+        type: callable[[float], float] # [py]
         description: Function of time returning the value of the specific impulse, useful to link the mass propagation to the thrust model.
 
       - name: isEngineOnFunction # [cpp]
         type: std::function<bool(double)>, default=[](double){return true;} # [cpp]
       - name: is_engine_on_function # [py]
-        type: "Callable[[float], bool], default=lambda t: true"  # [py]
+        type: "callable[[float], bool], default=lambda t: true"  # [py]
         description: Function of time returning a boolean, denoting  whether the thrust should be engaged at all (e.g. thrust is 0 N if it returns false). It is useful to link the mass propagation to the thrust model.
 
       - name: bodyFixedThrustDirection # [cpp]
         type: std::function<Eigen::Vector3d()>, , default=[](){return Eigen::Vector3d::UnitX();} # [cpp] # [cpp]
       - name: body_fixed_thrust_direction # [py]
-      - name: "Callable[[], numpy.ndarray], default=lambda t: numpy.ndarray([])" # [py]
+      - name: "callable[[], numpy.ndarray], default=lambda t: numpy.ndarray([])" # [py]
         description: Constant body-fixed thrust direction (positive x-direction by default). Note that this function should be a unit-vector representing the direction opposite to the nozzle direction. This setting can be used to incorporate thrust-vector control (TVC) into the thrust.
 
       - name: customThrustResetFunction # [cpp]
         type: std::function<void(const double)>, default=std::function<void(const double)>() # [cpp]
       - name: custom_thrust_reset_function # [py]
-        type: "Callable[[float], ], default=lambda t: None" # [py]
+        type: "callable[[float], ], default=lambda t: None" # [py]
         description: Function of time that updates any relevant aspects of the environment/system models, called before retrieving the thrust magnitude, specific impulse, and body-fixed thrust direction.
 
     returns:
