--- a/docstrings/numerical_simulation/propagation_setup/torque.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/torque.yaml
@@ -148,13 +148,13 @@ functions:
       - name: torqueFunction # [cpp]
         type: std::function<Eigen::Vector3d(const double)> # [cpp]
       - name: torque_function # [py]
-        type: Callable[[float], list] # [py]
+        type: callable[[float], list] # [py]
         description: Custom torque function with time as an independent variable.
 
       - name: scalingFunction # [cpp]
         type: std::function<double(const double)>, default=nullptr # [cpp]
       - name: scaling_function # [py]
-        type: Callable[[float], float], default=None # [py]
+        type: callable[[float], float], default=None # [py]
         description: Scaling function with time as an independent variable to be multiplied by the custom torque function.
 
     returns:
